--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,28 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
-
-  # Estado y rutas
-  flutter_riverpod: ^2.6.1
-  go_router: ^16.2.0
-
-  # Backend
+  # --- Core / backend ---
   supabase_flutter: ^2.9.1
   flutter_dotenv: ^6.0.0
 
-  # Offline/almacenamiento local
+  # --- Estado y rutas ---
+  flutter_riverpod: ^2.6.1
+  go_router: ^16.2.0
+
+  # --- Ubicación ---
+  geolocator: ^14.0.2
+
+  # --- Offline / almacenamiento local ---
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.5
 
-  # Networking/utilidades
+  # --- Networking / utilidades ---
   dio: ^5.9.0
   crypto: ^3.0.6
   uuid: ^4.5.1
 
-  # UI / media
+  # --- UI / media ---
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
   cached_network_image: ^3.4.1
@@ -41,6 +42,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   animations: ^2.0.11
   flutter_svg: ^2.2.0
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +53,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
   assets:
     - assets/.env
     - assets/images/
