--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,43 +14,28 @@ dependencies:
   # --- Core / backend ---
   supabase_flutter: ^2.9.1
   flutter_dotenv: ^6.0.0
-  # --- Core / backend ---
-  supabase_flutter: ^2.9.1
-  flutter_dotenv: ^6.0.0
+  flutter_riverpod: ^2.5.1
+  go_router: ^14.2.7
 
-  # --- --- Estado y rutas --- ---
-  flutter_riverpod: ^2.6.1
-  go_router: ^16.2.0
+  # --- UI / Utils ---
+  cached_network_image: ^3.3.1
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
+  cupertino_icons: ^1.0.8
 
-  # --- Ubicación ---
-  geolocator: ^14.0.2
-  # --- Ubicación ---
-  geolocator: ^14.0.2
-
-  # --- Offline / almacenamiento local ---
-  # --- Offline / almacenamiento local ---
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
-  path_provider: ^2.1.5
-
-  # --- Networking / utilidades ---
-  # --- Networking / utilidades ---
-  dio: ^5.9.0
-  crypto: ^3.0.6
-  uuid: ^4.5.1
-
-  # --- --- UI / media --- ---
-  flutter_map: ^8.2.1
+  # --- Mapa / GPS ---
+  flutter_map: ^7.0.2
   latlong2: ^0.9.1
-  cached_network_image: ^3.4.1
+  geolocator: ^12.0.0
+
+  # --- Descargas / Almacenamiento local ---
+  dio: ^5.7.0
+  crypto: ^3.0.3
+  path_provider: ^2.1.5
+  isar: ^3.1.0+1
   just_audio: ^0.10.4
-  intl: ^0.20.2
-  google_fonts: ^6.3.0
-  smooth_page_indicator: ^1.2.1
-  animations: ^2.0.11
-  flutter_svg: ^2.2.0
-  cupertino_icons: ^1.0.8
-  cupertino_icons: ^1.0.8
+  path: ^1.9.1
+  audio_session: ^0.2.2
 
 dev_dependencies:
   flutter_test:
