--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\hugo\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\hugo\\avanti\\flutter
+sdk.dir=C:\\Users\\hugo_\\AppData\\Local\\Android\\sdk
+flutter.sdk=D:\\Programacion\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
